[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Screenhead.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/Connecting.gd" type="Script" id=2]
[ext_resource path="res://UI/Fonts/Big.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Fonts/Small.tres" type="DynamicFont" id=4]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Control" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heading" type="Label" parent="."]
margin_top = 67.0
margin_right = 320.0
margin_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Connecting..."
align = 1

[node name="Messages" type="Label" parent="."]
visible = false
margin_top = 85.0
margin_right = 320.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="Spacer" type="Control" parent="."]
margin_top = 92.0
margin_right = 320.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 104.0
margin_right = 320.0
margin_bottom = 113.0
alignment = 1

[node name="CancelButton" type="LinkButton" parent="HBoxContainer"]
margin_left = 105.0
margin_right = 147.0
margin_bottom = 9.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Cancel"

[node name="CopyButton" type="LinkButton" parent="HBoxContainer"]
margin_left = 151.0
margin_right = 214.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
disabled = true
shortcut_in_tooltip = false
text = "Copy Code"
[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CopyButton" to="." method="_on_CopyButton_pressed"]
